--- a/blocks/left-image-right-login/package.json
+++ b/blocks/left-image-right-login/package.json
@@ -2,6 +2,11 @@
   "name": "@vui/left-image-right-login",
   "version": "1.0.0",
   "description": "左图右登录框",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
   "files": [
     "src/",
     "build/",
@@ -22,8 +27,42 @@
   },
   "license": "MIT",
   "dependencies": {
+    "core-js": "^2.6.5",
     "iview": "^3.4.2",
     "vue": "^2.6.10"
   },
-  "homepage": "https://unpkg.com/@vui/left-image-right-login/build/index.html"
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "homepage": "https://unpkg.com/@vui/left-image-right-login/build/index.html",
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "@vue/standard"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
