添加left-image-right-login组件

--- a/blocks/left-image-right-login/package.json
+++ b/blocks/left-image-right-login/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/531431988/vue-materials/tree/master/blocks/left-image-right-login"
+    "url": "https://github.com/531431988/vue-materials/blocks/left-image-right-login/dist/index.html"
   },
   "keywords": [
     "vue",
