--- a/components/login/package.json
+++ b/components/login/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vui-left-image-right-login",
+  "name": "login",
   "version": "1.0.0",
-  "description": "左右布局带背景图的登录表单页",
+  "description": "登录表单页",
   "author": {
     "name": "531431988",
     "email": "531431988@qq.com"
   },
   "license": "MIT",
-  "blockConfig": {
+  "other": {
     "name": "login",
     "title": "登录",
     "tags": [
