--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "iview": "^3.4.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
@@ -18,6 +20,7 @@
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.8.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "fs-extra": "^8.0.1",
@@ -25,6 +28,8 @@
     "less-loader": "^5.0.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "vue-cli-plugin-iview": "^1.0.6",
     "vue-template-compiler": "^2.6.10"
   }
 }
