--- a/template/package.json
+++ b/template/package.json
@@ -60,7 +60,7 @@
     "tags": [
       "标签"
     ],
-    "url": "https://github.com/531431988/vue-materials/",
-    "thumbnail": "https://github.com/531431988/vue-materials/"
+    "url": "https://531431988.github.io/vue-component-library/components/",
+    "thumbnail": "https://531431988.github.io/vue-component-library/components/"
   }
 }
