--- a/components/login/package.json
+++ b/components/login/package.json
@@ -13,7 +13,7 @@
     "tags": [
       "登录页"
     ],
-    "url": "https://github.com/531431988/vue-materials/blocks/left-image-right-login/dist/index.html",
-    "thumbnail": "https://github.com/531431988/vue-materials/blocks/left-image-right-login/screenshot.png"
+    "url": "https://531431988.github.io/vue-component-library/components/left-image-right-login/dist/index.html",
+    "thumbnail": "https://531431988.github.io/vue-component-library/components/left-image-right-login/screenshot.png"
   }
 }
