修复链接跳转问题

--- a/components/left-image-right-login/package.json
+++ b/components/left-image-right-login/package.json
@@ -7,13 +7,14 @@
     "email": "531431988@qq.com"
   },
   "license": "MIT",
-  "other": {
+  "info": {
     "name": "login",
     "title": "登录",
     "tags": [
       "登录页"
     ],
     "url": "https://531431988.github.io/vue-component-library/components/left-image-right-login/dist/index.html",
-    "thumbnail": "https://531431988.github.io/vue-component-library/components/left-image-right-login/screenshot.png"
+    "thumbnail": "https://531431988.github.io/vue-component-library/components/left-image-right-login/screenshot.png",
+    "source": "https://github.com/531431988/vue-component-library/tree/master/components/left-image-right-login"
   }
 }
