添加主框架

--- a/components/left-image-right-login/package.json
+++ b/components/left-image-right-login/package.json
@@ -11,7 +11,8 @@
     "name": "login",
     "title": "登录",
     "tags": [
-      "登录页"
+      "登录页",
+      "注册"
     ],
     "url": "https://531431988.github.io/vue-component-library/components/left-image-right-login/dist/index.html",
     "thumbnail": "https://531431988.github.io/vue-component-library/components/left-image-right-login/screenshot.png",
