--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "fs-extra": "^8.0.1",
+    "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-iview": "^1.0.6",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
