--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.0.1-beta3",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
