--- a/template/package.json
+++ b/template/package.json
@@ -23,12 +23,18 @@
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.0.1-beta3",
+    "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-iview": "^1.0.6",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -59,9 +65,6 @@
     "title": "模版",
     "tags": [
       "标签"
-    ],
-    "url": "https://531431988.github.io/vue-component-library/components/",
-    "thumbnail": "https://531431988.github.io/vue-component-library/components/",
-    "source": "https://github.com/531431988/vue-component-library/tree/master/components/"
+    ]
   }
 }
