--- a/components/left-image-right-login/package.json
+++ b/components/left-image-right-login/package.json
@@ -8,7 +8,7 @@
   },
   "license": "MIT",
   "info": {
-    "name": "login",
+    "name": "vui-left-image-right-login",
     "title": "登录",
     "tags": [
       "登录页",
