--- a/components/text/package.json
+++ b/components/text/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "skeleton",
+  "name": "text",
   "version": "1.0.0",
-  "description": "在需要等待加载内容的位置提供一个占位图",
+  "description": "内置不同样式的文本",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -34,6 +34,7 @@
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -60,11 +61,10 @@
     "last 2 versions"
   ],
   "info": {
-    "name": "skeleton",
-    "title": "骨架屏",
+    "name": "text",
+    "title": "文本组件",
     "tags": [
-      "骨架屏",
-      "加载"
+      "排版"
     ]
   }
 }
