--- a/components/chip/package.json
+++ b/components/chip/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "skeleton",
+  "name": "chip",
   "version": "1.0.0",
-  "description": "在需要等待加载内容的位置提供一个占位图",
+  "description": "展示简洁的信息",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "countup": "^1.8.2",
     "iview": "^3.4.2",
     "vue": "^2.6.10"
   },
@@ -34,6 +35,7 @@
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -60,10 +62,11 @@
     "last 2 versions"
   ],
   "info": {
-    "name": "skeleton",
-    "title": "骨架屏",
+    "name": "chip",
+    "title": "标签展示",
     "tags": [
-      "loading"
+      "标签",
+      "表单"
     ]
   }
 }
