--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "vue-block",
+  "name": "vue-component-library",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "tree": "node getComponentsTree.js",
     "serve": "vue-cli-service serve && getComponentsTree.js",
     "build": "vue-cli-service build && getComponentsTree.js",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "tree": "node getComponentsTree.js"
   },
   "dependencies": {
+    "ant-design-vue": "^1.3.9",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "iview": "^3.4.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
@@ -21,18 +21,18 @@
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "fs-extra": "^8.0.1",
-    "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mockjs": "^1.0.1-beta3",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-ant-design": "^1.0.0",
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.6.10"
