--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-cli-plugin-ant-design": "^1.0.0",
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^1.3.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
