--- a/template/package.json
+++ b/template/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^1.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
