--- a/components/chip/package.json
+++ b/components/chip/package.json
@@ -13,10 +13,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "ant-design-vue": "^1.3.9",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "countup": "^1.8.2",
-    "iview": "^3.4.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -28,7 +27,6 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mockjs": "^1.0.1-beta3",
@@ -65,7 +63,7 @@
     "name": "chip",
     "title": "标签展示",
     "tags": [
-      "标签",
+      "插件",
       "表单"
     ]
   }
