--- a/template/package.json
+++ b/template/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template",
+  "name": "chip",
   "version": "1.0.0",
-  "description": "template detail",
+  "description": "展示简洁的信息",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -34,7 +34,6 @@
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-cli-plugin-webpack-bundle-analyzer": "^1.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -61,10 +60,11 @@
     "last 2 versions"
   ],
   "info": {
-    "name": "template",
-    "title": "模版",
+    "name": "chip",
+    "title": "标签展示",
     "tags": [
-      "标签"
+      "插件",
+      "表单"
     ]
   }
 }
