--- a/components/vue-aplayer/package.json
+++ b/components/vue-aplayer/package.json
@@ -13,9 +13,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "ant-design-vue": "^1.3.9",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "iview": "^3.4.2",
     "vue": "^2.6.10",
     "vue-aplayer": "^1.6.1"
   },
@@ -28,7 +28,6 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mockjs": "^1.0.1-beta3",
