--- a/components/multi-platform-card-download/package.json
+++ b/components/multi-platform-card-download/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-fullscreen",
+  "name": "multi-platform-card-download",
   "version": "1.0.0",
-  "description": "全屏",
+  "description": "多平台下载卡片展示效果",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -16,8 +16,7 @@
     "ant-design-vue": "^1.3.9",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10",
-    "vue-fullscreen": "^2.1.5"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
@@ -61,10 +60,10 @@
     "last 2 versions"
   ],
   "info": {
-    "name": "vue-fullscreen",
-    "title": "全屏显示",
+    "name": "multi-platform-card-download",
+    "title": "下载展示",
     "tags": [
-      "插件"
+      "信息展示"
     ]
   }
 }
