--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
@@ -23,18 +24,23 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "compression-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "fs-extra": "^8.0.1",
+    "glob-all": "^3.1.0",
+    "image-webpack-loader": "^5.0.0",
     "iview-loader": "^1.2.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mockjs": "^1.0.1-beta3",
+    "purgecss-webpack-plugin": "^1.5.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
